--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "node ./dummy-server/server.js & react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
