--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "knex": "^0.21.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "node-sass": "^4.14.1",
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
