--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
