--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.2",
+    "logrocket": "^1.0.12",
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.1",
     "pg": "^8.3.0",
