--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "intro.js": "^3.0.0-beta.1",
+    "intro.js-react": "^0.2.0",
     "knex": "^0.21.2",
     "logrocket": "^1.0.12",
     "material-ui-icons": "^1.0.0-beta.36",
