--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "shortid": "^2.2.15",
     "tachyons": "^4.12.0",
     "typeface-roboto": "0.0.75"
   },
