added demo function

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "japanese-reading",
-  "homepage": "https://dieulien.github.io/japanese-reading/",
+  "homepage": "https://dieulien.github.io/JapanEZ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
